--- a/style.css
+++ b/style.css
@@ -49,8 +49,7 @@ body {
 }
 
 .container {
-    /* background-color: red; */
-    max-width: 1200px;
+    max-width: 1000px;
     width: 100%;
     height: 100vh;
     margin: auto;
@@ -80,17 +79,17 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 30px;
 }
 
 .header img {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     border-radius: 100px;
     border: 2px solid whitesmoke;
     margin-bottom: 25px;
     box-shadow: var(--shadow);
     transition: var(--transition);
+    margin-top: 20px;
 }
 
 .header img:hover {
@@ -107,16 +106,17 @@ body {
 .header b.name {
     color: white;
     font-weight: 700;
-    font-size: 38px;
+    font-size: 34px;
     margin: 5px 0;
     text-align: center;
-    max-width: 90%;
+    max-width: 95%;
 }
 
 .header .profession {
     color: var(--light-white);
     font-weight: 500;
     text-align: center;
+    max-width: 90%;
 }
 
 .profileBox .about {
@@ -195,13 +195,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
 }
 
 .icon img {
-    width: 45px;
-    height: 45px;
+    width: 35px;
+    height: 35px;
 }
 
 
@@ -261,8 +261,8 @@ body {
 }
 
 .skills .skill {
-    width: 300px;
-    height: 175px;
+    width: 250px;
+    height: 150px;
     display: flex;
     flex-wrap: wrap;
     gap: 8px;
